--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.1.2",
     "gatsby-remark-images": "^3.0.14",
+    "gatsby-remark-lazy-load": "^1.0.1",
     "gatsby-remark-relative-images": "^0.2.2",
     "gatsby-source-contentful": "^2.0.64",
     "gatsby-transformer-remark": "^2.3.12",
+    "lazysizes": "^5.1.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
